# routes/order.js
@@ -1,5 +1,6 @@
 const {
-    newOrder
+    newOrder,
+    test
 } = require('../controller/order');
 const  express = require("express");
 const {verifyToken} = require("../config/globals")
@@ -7,5 +8,6 @@ const {verifyToken} = require("../config/globals")
 const router = express.Router()
 
 router.post('/newOrder', verifyToken, newOrder);
+router.post('/test', test);
 
 module.exports = router
